store user to database
