# swagger_server/controllers/users_controller.py
@@ -3,6 +3,7 @@ import connexion
 import six
 
 from flask import abort
+from swagger_server.models.recording import Recording
 from swagger_server.models.user import User  # noqa: E501
 from swagger_server.service import user_service
 from swagger_server import util
@@ -24,7 +25,6 @@ def add_user(body):  # noqa: E501
     if is_valid(body):
         print("all good")
         result = user_service.add_user(body)
-        result = body
     else:
         abort(400, "Please provide all required attributes.")
     
@@ -35,7 +35,6 @@ def is_valid(user: User):
     Checks all the params whether they are all available or not
     """
     isValid = False
-
     if user.id and user.gender.recording and user.gender.time_to_recording and user.age.recording and user.age.time_to_recording:
         isValid = True
 
