# swagger_server/service/user_service.py
@@ -8,11 +8,14 @@ def add_user(user: User):
     checks all parameters and adds user to the storage
     """
     # before storing the user both recordings (age and gender) have to be saved
+    print("add age recording")
     age_id = store_recording(user.age)
+    print("add gender recording")
     gender_id = store_recording(user.gender)
     user.age.id = age_id
     user.gender.id = gender_id
 
     # after both recordings have been stored, the user itself can be stored with the corresponding foreign keys.
+    print("store user")
     result = store_user(user)
     return result
